--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
 
   <header>
     <div class="profile-info">
-      <img src="https://avatars.githubusercontent.com/u/placeholder?size=100" alt="Mayank Ojha" />
+      <img src="https://github.com/koder1996/koder1996.github.io/blob/main/passport%20size.jpg" />
       <div class="profile-text">
         <h1>Mayank Ojha</h1>
         <p>Technical Consultant | Full Stack Developer | System Designer</p>
