--- a/index.html
+++ b/index.html
@@ -130,7 +130,9 @@
 
   <header>
     <div class="profile-info">
-      <img src="https://github.com/koder1996/koder1996.github.io/blob/main/passport%20size.jpg" />
+     
+      <img src="https://raw.githubusercontent.com/koder1996/koder1996.github.io/main/passport%20size.jpg" alt="Mayank Ojha" style="border-radius: 50%; width: 120px; height: 120px;" />
+
       <div class="profile-text">
         <h1>Mayank Ojha</h1>
         <p>Technical Consultant | Full Stack Developer | System Designer</p>
