--- a/index.html
+++ b/index.html
@@ -138,6 +138,15 @@
         <p>Technical Consultant | Full Stack Developer | System Designer</p>
       </div>
     </div>
+     <!-- Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-TXC5JYYLGF"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'G-TXC5JYYLGF');
+  </script>
+    
     <div class="contact-details">
       <p>📧 mayankojha294@gmail.com</p>
       <p>📞 +91-9670071000</p>
