--- a/index.html
+++ b/index.html
@@ -157,30 +157,37 @@
 <section class="about">
   <h2>About Me</h2>
   <p>
-    <strong>Passionate Computer Science Engineer | 6+ Years of Industry Experience | Lifelong Learner & Innovator</strong>
+    <strong>Passionate Computer Science Engineer | 6+ Years of Diverse Global Experience | Technical Consultant at Deloitte</strong>
   </p>
   <p>
-    Hello! I'm <strong>Mayank Ojha</strong>, a dedicated and dynamic Computer Science Engineer with over 6 years of hands-on experience in the tech industry. Since graduating in 2019, I’ve worked across web and software development, full stack projects, technical consulting, and client engagement — delivering impactful solutions for Government of India initiatives and digital transformation programs.
+    Hello! I'm <strong>Mayank Ojha</strong>, a dynamic and forward-thinking Computer Science Engineer with over 6 years of hands-on experience driving impactful digital solutions across India, the UK, and the US. My work spans government tech programs, e-commerce platforms, cloud transformations, and enterprise system design — all driven by a passion for building scalable, innovative technologies.
+  </p>
+  <p>
+    <strong>Highlights of My Journey:</strong>
+    <ul>
+      <li><strong>CSC – E-Governance India:</strong> Contributed to flagship digital transformation initiatives under the Ministry of Electronics and Information Technology (MeitY), including Ed-Tech and IT infrastructure projects. These experiences grounded me in system architecture, governance platforms, and high-impact public service delivery.</li>
+      <li><strong>Pro Tele Services:</strong> Delivered custom e-commerce and infrastructure solutions for clients across the US and UK, focusing on system optimization, user experience, and operational efficiency.</li>
+      <li><strong>Neutara Technologies:</strong> Worked with Magento-based content management systems, gaining exposure to CMS frameworks, even in content-heavy projects with limited backend logic.</li>
+      <li><strong>Java R&D Pvt Ltd:</strong> Focused on technology solutions in the banking and finance sector — building modules for secure financial transactions, back-office tools, and service APIs for UK-based banking clients.</li>
+      <li><strong>Deloitte India (Current Role):</strong> Serving as a Technical Consultant and Developer for Government and Ed-Tech modernization projects. I lead full-stack implementations, cloud infrastructure transformations, and data intelligence pipelines (ETL + Power BI) to enhance education through technology.</li>
+    </ul>
   </p>
   <p>
     <strong>What I Bring to the Table:</strong>
     <ul>
-      <li><strong>Technical Proficiency:</strong> Skilled in PHP, JavaScript, Python, Power BI, and SQL — with a focus on leveraging technology to simplify and scale systems.</li>
-      <li><strong>Problem Solver:</strong> I love tackling complex technical challenges and building innovative, real-world solutions.</li>
-      <li><strong>Team Player:</strong> I thrive in collaborative environments and value opportunities to both lead and learn.</li>
-      <li><strong>Continuous Learner:</strong> I actively follow the latest trends in technology, development practices, and business intelligence.</li>
+      <li><strong>Technical Expertise:</strong> Proficient in Python, PHP, JavaScript, Power BI, SQL, Django, and cloud platforms — I build robust backends and intuitive frontends with equal ease.</li>
+      <li><strong>Cloud & Data Focus:</strong> Experienced in cloud infrastructure transformation, real-time data processing, ETL pipelines, and custom dashboards for decision-making.</li>
+      <li><strong>Problem Solver & Collaborator:</strong> I love simplifying complexity. My approach blends technical problem-solving with stakeholder collaboration and agile delivery.</li>
+      <li><strong>Global Experience:</strong> Exposure to diverse industries and cultures has sharpened my adaptability, communication, and cross-functional delivery skills.</li>
     </ul>
   </p>
   <p>
-    <strong>My Journey So Far:</strong> I began my professional path at <em>CSC - E Governance</em>, contributing to several flagship digital initiatives under the Government of India. These projects helped me understand large-scale system architecture and the real-world impact of software solutions.
+    <strong>What’s Next?</strong> I'm actively exploring opportunities where I can combine development, consulting, and data-driven innovation. If you're working on projects in Ed-Tech, Digital Governance, Cloud, or AI-powered systems — let's talk!
   </p>
   <p>
-    <strong>What’s Next?</strong> I’m looking to grow further in roles that blend software development, leadership, and business intelligence. I’m open to exciting opportunities, professional connections, and insightful conversations about tech and innovation.
+    <strong>Let’s connect:</strong> Whether you’re looking to collaborate, innovate, or simply network over emerging tech trends — feel free to reach out.
   </p>
-  <p>
-    <strong>Let’s connect!</strong> Reach out if you'd like to collaborate, network, or chat about emerging tech trends.
-  </p>
-  <p><em>“The road to success is always under construction.”</em></p>
+  <p><em>“Code is not just syntax — it's how we translate ideas into impact.”</em></p>
 </section>
 
   <section class="skills">
